feature: invert brightness

--- a/frzscr.1
+++ b/frzscr.1
@@ -4,7 +4,7 @@ frzscr \- freeze screen
 
 .SH SYNOPSIS
 .B frzscr
-[\fB\-Cvh\fR]
+[\fB\-Cvhi\fR]
 [\fB\-o\fR \fIOUTPUT\fR]
 [\fB\-t\fR \fITIMEOUT\fR]
 [\fB\-s\fR \fISIGNUM\fR]
@@ -33,6 +33,9 @@ Include cursor in the overlay.
 .TP
 \fB\-v\fR
 Enable debug output.
+.TP
+\fB\-i\fR
+Invert brightness.
 .TP
 \fB\-h\fR
 Print help message and exit.
